# monasca-rsyslog

./: README.md  requirements.txt  setup.cfg  setup.py
etc/monasca/: monasca-rsyslog.conf
etc/rsyslog.d/: 50-monasca-rsyslog-template.conf  60-monasca-rsyslog-omprog.conf
monasca_rsyslog/: client.py  main.py
