[metadata]
name = monasca-rsyslog
summary = Tool and config files for sending rsyslog output to Monasca.
description-file = README.md
author = StackHPC
author-email = steve@stackhpc.com
home-page = https://github.com/stackhpc/monasca-rsyslog
license=Apache-2
classifier =
    Development Status :: 4 - Beta
    Environment :: OpenStack
    License :: OSI Approved :: Apache Software License
    Topic :: System :: Monitoring
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
packages =
    monasca_rsyslog

data_files =
    etc/monasca =
        etc/monasca/monasca-rsyslog.conf
    etc/rsyslog.d =
        etc/rsyslog.d/50-monasca-rsyslog-template.conf
        etc/rsyslog.d/60-monasca-rsyslog-omprog.conf

[entry_points]
console_scripts =
    monasca-rsyslog = monasca_rsyslog.main:main

[wheel]
universal = 1

[pbr]
warnerrors = True
